tests/spectest/table-sub.bin.wast
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\04\88\80\80\80\00"
  "\02\70\00\0a\63\00\00\0a\09\84\80\80\80\00\01\05"
  "\70\00\0a\9c\80\80\80\00\01\96\80\80\80\00\00\41"
  "\00\41\01\41\02\fc\0c\00\00\41\00\41\01\41\02\fc"
  "\0e\00\01\0b"
)
(module instance)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\04\87\80\80\80\00"
    "\02\70\00\0a\6f\00\0a\0a\92\80\80\80\00\01\8c\80"
    "\80\80\00\00\41\00\41\01\41\02\fc\0e\00\01\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\04\84\80\80\80\00"
    "\01\70\00\0a\09\84\80\80\80\00\01\05\6f\00\0a\92"
    "\80\80\80\00\01\8c\80\80\80\00\00\41\00\41\01\41"
    "\02\fc\0c\00\00\0b"
  )
  "type mismatch"
)
